[gd_scene load_steps=5 format=3 uid="uid://dcbpk7yd7aqv7"]

[ext_resource type="Script" path="res://scripts/fish_game.gd" id="1_rr6hl"]
[ext_resource type="Texture2D" path="res://assets/Fish2D.png" id="3_2rr7r"]
[ext_resource type="PackedScene" uid="uid://p1bpuo11ick5" path="res://scenes/fish_spawner.tscn" id="3_4mnn3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_01lcp"]
radius = 19.0
height = 92.0

[node name="FishGame" type="Node2D"]
position = Vector2(570, 602)
script = ExtResource("1_rr6hl")

[node name="CaptureArea" type="Area2D" parent="."]
position = Vector2(50, 0)
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="CaptureArea"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_2rr7r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaptureArea"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_01lcp")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(8, 0)

[node name="FishSpawner" parent="." instance=ExtResource("3_4mnn3")]
position = Vector2(644, 0)

[connection signal="area_entered" from="CaptureArea" to="." method="_on_capture_area_area_entered"]
[connection signal="area_exited" from="CaptureArea" to="." method="_on_capture_area_area_exited"]
